--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,17 @@
     "description": "back-end demo app for Apollo's lift-off II course",
     "main": "src/index.js",
     "scripts": {
-      "start": "nodemon src/index"
+        "start": "nodemon src/index"
     },
     "dependencies": {
-      "apollo-server": "^3.0.0",
-      "graphql": "^15.5.1"
+        "apollo-datasource-rest": "^3.6.1",
+        "apollo-server": "^3.0.0",
+        "graphql": "^15.5.1"
     },
     "devDependencies": {
-      "dotenv": "^8.2.0",
-      "nodemon": "^2.0.4"
+        "dotenv": "^8.2.0",
+        "nodemon": "^2.0.4"
     },
     "license": "MIT",
     "private": true
-  }
-  
+}
